-
Bug
-
Resolution: Done
-
P2: Important
-
6.4.1
-
None
-
-
fb35c54b1e (qt/qtbase/dev) fb35c54b1e (qt/tqtc-qtbase/dev), a5be86897 (6.4)
Undefined symbols for architecture x86_64:
"QColor::QColor(char const*)", referenced from:...
...
"QColor::QColor(QString const&)", referenced from:
Please check the constructors
QColor::QColor(const QString &name)
QColor::QColor(const char *name)
QColor::QColor(QLatin1StringView name)
and so on
They are commented out in the qcolor.cpp.
https://code.qt.io/cgit/qt/qtbase.git/tree/src/gui/painting/qcolor.cpp?h=6.4.1
// ### Qt 7: remove those after deprecating them for the last Qt 6 LTS release /*! \fn QColor::QColor(const QString &name) Constructs a named color in the same way as setNamedColor() using the given \a name. The color is left invalid if the \a name cannot be parsed. \sa setNamedColor(), name(), isValid() */ /*! \fn QColor::QColor(const char *name) Constructs a named color in the same way as setNamedColor() using the given \a name. \overload \sa setNamedColor(), name(), isValid() */ /*! \fn QColor::QColor(QLatin1StringView name) Constructs a named color in the same way as setNamedColor() using the given \a name. \overload \since 5.8 \sa setNamedColor(), name(), isValid() */
While exist in header.
And the documentation for 6.4 tells nothing about any deprecations
https://doc.qt.io/qt-6/qcolor.html#QColor-5
This is likely a merge mistake, it shouldn't be this way. This is not how one typically deprecates some functions )
For Gerrit Dashboard: QTBUG-108743 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
444685,3 | Finish the undeprecation of the QColor(string) constructors | dev | qt/qtbase | Status: MERGED | +2 | 0 |
445151,2 | Finish the undeprecation of the QColor(string) constructors | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |