Finish the undeprecation of the QColor(string) constructors

Fixes: QTBUG-108743
Change-Id: I826ae98a542516a5cf9a4e556d5e8830f9c47a86
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit fb35c54b1e8e02329a40e7a5c473bde56038206c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>